# Unitodo

./: .gitignore  Cargo.toml  ELECTRON.md  FRONTEND.md  RAW.md  README-ELECTRON.md  README.md  build-electron.sh  build.rs  config.toml  copy-sync-file.js  dev-electron.sh  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tauri.conf.json  tsconfig.json  unitodo.toml
.cursor/rules/: next-rule.mdc
.github/workflows/: release.yml
app/: globals.css  layout.tsx  page.tsx  providers.tsx  types.ts  utils.ts
app/api/: utils.ts
app/api/config/: route.ts
app/api/config/profiles/: route.ts
app/api/config/profiles/[profileName]/: route.ts
app/api/config/profiles/active/: route.ts
app/api/todos/: route.ts
app/api/todos/add/: route.ts
app/api/todos/edit/: route.ts
app/api/todos/mark-done/: route.ts
app/components/: AddTodoModal.tsx  ElectronTitleBar.tsx  LexicalNodes.ts  LexicalTodoEditor.tsx  NerdFontIcon.tsx  TitleBar.tsx  Todo.tsx  TodoCategory.tsx  TodoCategoryHeader.tsx  TodoItem.tsx  TodoTable.tsx  WinTitleBar.tsx  WinTitleBarClient.tsx  ZoomIndicator.tsx  ZoomIndicatorWrapper.tsx
app/config/: layout.tsx  page.tsx
app/grpc-generated/: unitodo_grpc_pb.d.ts  unitodo_grpc_pb.js  unitodo_pb.d.ts  unitodo_pb.js
app/services/: configService.ts  todoService.ts
app/store/: configStore.ts  runtimeConfig.ts  todoStore.ts  zoomIndicatorStore.ts
app/styles/: fonts.css
app/types/: electron.d.ts
app/utils/: apiUtils.ts  darkMode.ts  electronDetection.ts  zoom-shortcuts.ts
electron/: forge.config.js  main.js  preload.js
proto/: unitodo.proto
resources/: create_icns.sh  icon.icns  icon.icns.placeholder
src/: main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/proto/: unitodo.proto
src-tauri/src/: config_io.rs  config_models.rs  file_operations.rs  grpc_services.rs  lib.rs  main.rs  tauri_commands.rs  todo_models.rs  todo_processing.rs  utils.rs
