[package]
name = "unitodo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.1" # Updated TOML version
home = "0.5.5"
glob = "0.3.1"
regex = "1.9.5"
actix-web = "4" # Added actix-web
env_logger = "0.11" # Added env_logger

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
