[package]
name = "Unitodo"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio-stream = { version = "0.1", features = ["net"] }
serde_json = "1.0"
toml = "0.8"
home = "0.5"
glob = "0.3"
regex = "1"
env_logger = "0.11.3"
grep-searcher = "0.1"
grep-regex = "0.1"
ignore = "0.4"
walkdir = "2"
globset = "0.4"
natord = "1.0.9"
fs2 = "0.4"
lazy_static = "1.4.0"
parking_lot = "0.12"
dirs = "5.0"
cocoa = "0.25"
tauri = { version = "2.0.0-beta.1", features = ["macos-private-api"] }
log = "0.4"

# gRPC dependencies
tonic = "0.11"
prost = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tauri-plugin-opener = "2"

[dependencies.tauri-plugin-updater]
version = "2.0.0-beta.1"
features = []

[build-dependencies]
tonic-build = "0.11"
tauri-build = { version = "2.0.0-beta.1", features = [] }

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
